STM32/stm32_workspace/.metadata/.plugins/org.eclipse.cdt.ui/small_led_driver.build.log
22:59:01 **** Incremental Build of configuration Debug for project small_led_driver ****
make -j7 all 
arm-none-eabi-gcc "../src/flash_access.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L431xx -c -I../sdk/FreeRTOS/Source/CMSIS_RTOS_V2 -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/ws2812b_driver" -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/color_led" -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/animate_led" -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/task" -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/current_monitor" -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/semaphore" -I../src/stm32_bloat -I../sdk/CMSIS/Device/ST/STM32L4xx/Include -I../sdk/CMSIS/Include -I../src/bsp -I../startup -I../src -I../sdk/STM32l4xx_HAL_Driver/Inc -I../sdk/STM32l4xx_HAL_Driver/Inc/Legacy -I../sdk/FreeRTOS/Source -I../sdk/FreeRTOS/Source/include -I../sdk/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../src/bsp/board_specific -I../src/bsp/board_specific/board_init_spud_glo_v1 -I../src/bsp/board_specific/board_init_spud_glo_v2 -I../src/bsp/board_specific/board_init_spud_glo_v3 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"src/flash_access.d" -MT"src/flash_access.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "src/flash_access.o"
../src/flash_access.c: In function 'flash_access_write_user_flash':
../src/flash_access.c:55:5: warning: implicit declaration of function 'HAL_FLASH_Program'; did you mean 'HAL_FLASH_Program_IT'? [-Wimplicit-function-declaration]
   55 |     HAL_FLASH_Program(FLASH_TYPEPROGRAM_DOUBLEWORD, FLASH_START_ADDRESS + FLASH_USER_SPACE_START_ADDRESS, &g_count);
      |     ^~~~~~~~~~~~~~~~~
      |     HAL_FLASH_Program_IT
../src/flash_access.c: In function 'flash_access_read_user_flash':
../src/flash_access.c:63:19: error: lvalue required as left operand of assignment
   63 |     &g_user_flash = (uint64_t)(FLASH_START_ADDRESS + FLASH_USER_SPACE_START_ADDRESS);
      |                   ^
make: *** [src/subdir.mk:31: src/flash_access.o] Error 1
"make -j7 all" terminated with exit code 2. Build might be incomplete.

22:59:02 Build Failed. 2 errors, 1 warnings. (took 902ms)

